FIX: layout on tablets

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@
 
 /* edy styles */
 body {
-  background-image: url("img/beams.jpg");
+  background-image: url("/img/beams.jpg");
   @apply bg-cover bg-center;
 }
 .dark body {
